[package]
name = "drone-sniper-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
bevy_rapier3d = "0.21.0"
rand = "0.8.5"
